# mimalloc_rust

./: .gitmodules  Cargo.toml
libmimalloc-sys/: Cargo.toml  build.rs
src/: lib.rs
