[package]
name = "mimalloc"
version = "0.1.39"
authors = [
    "Octavian Oncescu <octavonce@gmail.com>",
    "Vincent Rouillé <vincent@speedy37.fr>",
    "Thom Chiovoloni <chiovolonit@gmail.com>",
]
edition = "2018"
repository = "https://github.com/purpleprotocol/mimalloc_rust"
keywords = ["mimalloc", "allocator", "encrypted-heap", "performance"]
categories = ["memory-management", "api-bindings"]
description = "Performance and security oriented drop-in allocator"
license = "MIT"
readme = "README.md"

[workspace]
members = ["libmimalloc-sys", "libmimalloc-sys/sys-test"]

[badges]
travis-ci = { repository = "purpleprotocol/mimalloc_rust" }

[dependencies]
libmimalloc-sys = { path = "libmimalloc-sys", version = "0.1.35", default-features = false }

[features]
default = []
secure = ["secure_full"]
secure_full = ["libmimalloc-sys/secure_full"]
secure_3 = ["libmimalloc-sys/secure_3"]
secure_2 = ["libmimalloc-sys/secure_2"]
secure_1 = ["libmimalloc-sys/secure_1"]
override = ["libmimalloc-sys/override"]
debug = ["libmimalloc-sys/debug"]
debug_in_debug = ["libmimalloc-sys/debug_in_debug"]
local_dynamic_tls = ["libmimalloc-sys/local_dynamic_tls"]
